# AI-Interview-Assistant

./: CLAUDE.md  docker-compose.yml
backend/: create_tables.py  pyproject.toml  seed_data.py  seed_user.py
backend/app/: config.py  main.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  interview.py  learn.py  user.py
backend/app/routers/: interviews.py  learn.py  users.py
backend/app/schemas/: interview.py  learn.py  user.py
