[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
